--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat,Roboto,Helvetica,Arial,sans-serif;
+}
+
+h6 {
+  font-size: 20px;
+  margin: 0;
+  font-weight: 500;
+}
+
+p {
+  margin: 0;
+  font-family: Roboto,Helvetica,Arial,sans-serif;
+  font-weight: 300;
+}
+
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
