--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Montserrat,Roboto,Helvetica,Arial,sans-serif;
+  background-color: azure;
 }
 
 h6 {
